[gd_scene load_steps=22 format=2]

[ext_resource path="res://tile/map.tscn" type="PackedScene" id=2]
[ext_resource path="res://actor/space_ships/player/grid_camera_2d.tscn" type="PackedScene" id=3]
[ext_resource path="res://actor/door/laser_target.tscn" type="PackedScene" id=4]
[ext_resource path="res://prototype/transition/room_transfer.tscn" type="PackedScene" id=5]
[ext_resource path="res://actor/poles/pole_group.tscn" type="PackedScene" id=6]
[ext_resource path="res://actor/space_ships/ai/guard.tscn" type="PackedScene" id=7]
[ext_resource path="res://actor/space_ships/player/player_ship.tscn" type="PackedScene" id=8]
[ext_resource path="res://title_screen/title_screen.tscn" type="PackedScene" id=9]
[ext_resource path="res://music.tscn" type="PackedScene" id=10]
[ext_resource path="res://actor/poles/pole.tscn" type="PackedScene" id=11]
[ext_resource path="res://tile/background/galaxy.tscn" type="PackedScene" id=12]
[ext_resource path="res://actor/door/door.tscn" type="PackedScene" id=13]
[ext_resource path="res://actor/pickup/pickup.tscn" type="PackedScene" id=14]
[ext_resource path="res://game.gd" type="Script" id=15]
[ext_resource path="res://actor/pickup/object_cake.png" type="Texture" id=16]
[ext_resource path="res://ambient_background.ogg" type="AudioStream" id=17]
[ext_resource path="res://tile/slot.png" type="Texture" id=18]

[sub_resource type="Animation" id=1]
resource_name = "rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=2]
resource_name = "rotate"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "dance"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1.2, 0.8 ) ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 216, 10 )

[node name="game" type="Node" groups=["cake"]]
script = ExtResource( 15 )

[node name="Galaxy" parent="." instance=ExtResource( 12 )]

[node name="Node2D" type="Node2D" parent="."]

[node name="Map" parent="Node2D" instance=ExtResource( 2 )]

[node name="Last" type="Label" parent="Node2D/Map"]
margin_left = 2824.0
margin_top = 1512.0
margin_right = 2946.0
margin_bottom = 1577.0
text = "<- Opens exit
In first room
You got 1 minute.
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainExit" type="Label" parent="Node2D/Map"]
modulate = Color( 0.541176, 0.427451, 0.482353, 1 )
margin_left = 280.0
margin_top = 16.0
margin_right = 305.0
margin_bottom = 30.0
text = "Exit "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpaceShip" parent="Node2D" instance=ExtResource( 8 )]
position = Vector2( 240, 32 )
rotation = 1.5708
velocity = Vector2( 0, 0 )

[node name="GridCamera2D" parent="Node2D/SpaceShip" instance=ExtResource( 3 )]
limit_left = 0
limit_top = 0
limit_right = 3072
limit_bottom = 2016
smoothing_speed = 8.0
editor_draw_limits = true

[node name="Camera2D" type="Camera2D" parent="Node2D/SpaceShip"]
limit_left = 0
limit_top = 0
limit_right = 3072
limit_bottom = 2016
smoothing_enabled = true

[node name="Actors" type="Node2D" parent="Node2D"]

[node name="Guard" parent="Node2D/Actors" instance=ExtResource( 7 )]
position = Vector2( 2816, 144 )

[node name="Pickup" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 2984, 152 )

[node name="Pickup2" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 2288, 456 )

[node name="Pickup3" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 1416, 144 )

[node name="Pickup4" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 64, 512 )

[node name="Pickup5" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 2872, 1072 )

[node name="Pickup6" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 3016, 1072 )

[node name="Pickup7" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 2944, 1040 )

[node name="Pickup8" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 768, 1576 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Node2D/Actors/Pickup8"]
autoplay = "rotate"
anims/rotate = SubResource( 1 )

[node name="Pickup10" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 2608, 1593 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Node2D/Actors/Pickup10"]
autoplay = "rotate"
anims/rotate = SubResource( 2 )

[node name="Pickup9" parent="Node2D/Actors" instance=ExtResource( 14 )]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 768, 992 )
scale = Vector2( 1.09211, 0.907888 )

[node name="AnimationPlayer2" type="AnimationPlayer" parent="Node2D/Actors/Pickup9"]
autoplay = "dance"
anims/dance = SubResource( 3 )

[node name="PoleGroup" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 691, 59 )

[node name="Pole2" parent="Node2D/Actors/PoleGroup" instance=ExtResource( 11 )]
position = Vector2( 147, 33 )

[node name="Pole3" parent="Node2D/Actors/PoleGroup" instance=ExtResource( 11 )]
position = Vector2( 147, 155 )

[node name="Pole4" parent="Node2D/Actors/PoleGroup" instance=ExtResource( 11 )]
position = Vector2( -115, 157 )

[node name="PoleGroup2" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 2143, 408 )

[node name="PoleGroup3" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 2439, 441 )

[node name="Pole6" parent="Node2D/Actors/PoleGroup3" instance=ExtResource( 11 )]
position = Vector2( 41, 23 )

[node name="PoleGroup4" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 2672, 367 )

[node name="Pole8" parent="Node2D/Actors/PoleGroup4" instance=ExtResource( 11 )]
position = Vector2( 88, 1 )

[node name="Pole9" parent="Node2D/Actors/PoleGroup4" instance=ExtResource( 11 )]
position = Vector2( 176, 1 )

[node name="Pole10" parent="Node2D/Actors/PoleGroup4" instance=ExtResource( 11 )]
position = Vector2( 240, 57 )

[node name="Pole11" parent="Node2D/Actors/PoleGroup4" instance=ExtResource( 11 )]
position = Vector2( 240, 129 )

[node name="PoleGroup5" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 2871, 704 )

[node name="Pole12" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( 49, -40 )

[node name="Pole14" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( 57, 16 )

[node name="Pole15" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( 1, 64 )

[node name="Pole16" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( -47, 32 )

[node name="Pole17" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( -15, -48 )

[node name="Pole18" parent="Node2D/Actors/PoleGroup5" instance=ExtResource( 11 )]
position = Vector2( -55, -24 )

[node name="PoleGroup6" parent="Node2D/Actors" instance=ExtResource( 6 )]
position = Vector2( 2692, 773 )

[node name="Pole21" parent="Node2D/Actors/PoleGroup6" instance=ExtResource( 11 )]
position = Vector2( -60, 11 )

[node name="Pole22" parent="Node2D/Actors/PoleGroup6" instance=ExtResource( 11 )]
position = Vector2( -52, 75 )

[node name="Pole23" parent="Node2D/Actors/PoleGroup6" instance=ExtResource( 11 )]
position = Vector2( 52, 51 )

[node name="LaserTarget" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 288, 220 )
rotation = -1.57079
active_time = 3.0

[node name="Line2D" type="Line2D" parent="Node2D/Actors/LaserTarget"]
points = PoolVector2Array( -4, 3.05176e-05, -20, 0.00012207, -20.0001, -15.9999 )
width = 2.0
default_color = Color( 0.764706, 0.309804, 0.34902, 1 )

[node name="LaserTarget2" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 496, 536 )
rotation = -3.14159
active_time = 4.0

[node name="Line2D2" type="Line2D" parent="Node2D/Actors/LaserTarget2"]
points = PoolVector2Array( 0, 0, -8, 3.05176e-05, -8.00006, -31.9999, 392, -32.001, 392, -24.001 )
width = 2.0
default_color = Color( 0.764706, 0.309804, 0.34902, 1 )

[node name="LaserTarget3" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 16, 520 )
active_time = 0.0

[node name="Line2D3" type="Line2D" parent="Node2D/Actors/LaserTarget3"]
position = Vector2( 8, 0 )
points = PoolVector2Array( -8, 0, -16, 0, -16, -48, 80, -48, 80, -24 )
width = 2.0
default_color = Color( 0.764706, 0.309804, 0.34902, 1 )

[node name="LaserTarget4" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 532, 520 )
active_time = 7.0

[node name="LaserTarget6" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2101, 664 )
active_time = 0.0

[node name="LaserTarget7" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2476, 800 )
rotation = 3.14159
active_time = 14.0

[node name="LaserTarget8" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 1644, 704 )
rotation = -3.14159

[node name="LaserTarget9" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2348, 1024 )
rotation = -3.14159
active_time = 6.0

[node name="LaserTarget10" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 3008, 1172 )
rotation = -4.71239
active_time = 1.0

[node name="LaserTarget11" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 3040, 1172 )
rotation = -4.71239
active_time = 4.0

[node name="LaserTarget12" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2880, 1172 )
rotation = -4.71239
active_time = 0.2

[node name="LaserTarget13" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2848, 1172 )
rotation = -4.71239

[node name="LaserTarget14" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2437, 1592 )
active_time = 0.0

[node name="LaserTarget15" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2556, 1296 )
rotation = -3.14159
active_time = 0.0

[node name="LaserTarget16" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2800, 1524 )
rotation = 1.5708
active_time = 0.0

[node name="LaserTarget17" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 2244, 1152 )
active_time = 20.0

[node name="LaserTarget18" parent="Node2D/Actors" instance=ExtResource( 4 )]
position = Vector2( 532, 112 )
rotation = 0.000125606
active_time = 0.0

[node name="Door" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 240, 240 )

[node name="Door2" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 104, 528 )
rotation = 1.57079

[node name="Door15" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 512, 64 )
rotation = 1.57079

[node name="Door3" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 640, 288 )

[node name="Door5" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 2288, 488 )
rotation = 6.28318

[node name="Door6" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 2272, 1064 )
rotation = 6.28318

[node name="Door7" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 2272, 1080 )
rotation = 6.28318

[node name="Door8" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 2272, 1096 )
rotation = 6.28318

[node name="Door9" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 2944, 1152 )
rotation = 6.28318

[node name="Door10" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 256, 1440 )
rotation = 6.28318

[node name="Door11" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 752, 1440 )
rotation = 6.28318

[node name="Door13" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 1280, 1440 )
rotation = 6.28318

[node name="Door12" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 1408, 1624 )
rotation = 6.28318

[node name="Door14" parent="Node2D/Actors" instance=ExtResource( 13 )]
position = Vector2( 240, 8 )
rotation = 6.28318

[node name="Pickup11" parent="Node2D/Actors" instance=ExtResource( 14 )]
position = Vector2( 1000, 520 )

[node name="RoomTransfer" parent="Node2D/Actors" instance=ExtResource( 5 )]
position = Vector2( 240, -32 )
room_path = "res://credits/credits.tscn"

[node name="CollisionShape2D" parent="Node2D/Actors/RoomTransfer" index="0"]
shape = SubResource( 4 )

[node name="Transition" parent="Node2D/Actors/RoomTransfer/CanvasLayer" index="0"]
next_scene = "res://credits/credits.tscn"

[node name="Label" parent="Node2D/Actors/RoomTransfer" index="3"]
text = "credits.tscn"

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 2

[node name="MiniMap" type="GridContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -64.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 46.0
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_right = 8.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_right = 18.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect3" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_right = 28.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect4" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_right = 38.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect5" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_right = 48.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect6" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_right = 58.0
margin_bottom = 4.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect7" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 6.0
margin_right = 8.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect8" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 6.0
margin_right = 18.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect9" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 6.0
margin_right = 28.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect10" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 6.0
margin_right = 38.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect11" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 6.0
margin_right = 48.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect12" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 6.0
margin_right = 58.0
margin_bottom = 10.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect13" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 12.0
margin_right = 8.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect14" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 12.0
margin_right = 18.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect15" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 12.0
margin_right = 28.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect16" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 12.0
margin_right = 38.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect17" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 12.0
margin_right = 48.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect18" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 12.0
margin_right = 58.0
margin_bottom = 16.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect19" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 18.0
margin_right = 8.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect20" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 18.0
margin_right = 18.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect21" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 18.0
margin_right = 28.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect22" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 18.0
margin_right = 38.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect23" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 18.0
margin_right = 48.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect24" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 18.0
margin_right = 58.0
margin_bottom = 22.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect25" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 24.0
margin_right = 8.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect26" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 24.0
margin_right = 18.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect27" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 24.0
margin_right = 28.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect28" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 24.0
margin_right = 38.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect29" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 24.0
margin_right = 48.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect30" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 24.0
margin_right = 58.0
margin_bottom = 28.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect31" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 30.0
margin_right = 8.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect32" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 30.0
margin_right = 18.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect33" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 30.0
margin_right = 28.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect34" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 30.0
margin_right = 38.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect35" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 30.0
margin_right = 48.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect36" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 30.0
margin_right = 58.0
margin_bottom = 34.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect37" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_top = 36.0
margin_right = 8.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect38" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 10.0
margin_top = 36.0
margin_right = 18.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect39" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 20.0
margin_top = 36.0
margin_right = 28.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect40" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 30.0
margin_top = 36.0
margin_right = 38.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect41" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 40.0
margin_top = 36.0
margin_right = 48.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="ColorRect42" type="ColorRect" parent="CanvasLayer/MiniMap"]
margin_left = 50.0
margin_top = 36.0
margin_right = 58.0
margin_bottom = 40.5
rect_min_size = Vector2( 8, 4.5 )
color = Color( 0.498039, 0.498039, 0.498039, 1 )

[node name="Slots" type="TextureRect" parent="CanvasLayer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 168.0
margin_bottom = 24.0
rect_min_size = Vector2( 160, 16 )
texture = ExtResource( 18 )
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cakes" type="TextureRect" parent="CanvasLayer/Slots"]
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
texture = ExtResource( 16 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="CanvasLayer/Slots"]

[node name="TitleScreen" parent="CanvasLayer" instance=ExtResource( 9 )]

[node name="Music" parent="." instance=ExtResource( 10 )]
pause_mode = 2
stream = ExtResource( 17 )

[connection signal="position_changed" from="Node2D/SpaceShip/GridCamera2D" to="." method="_on_GridCamera2D_position_changed"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget" to="Node2D/Actors/Door" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget2" to="Node2D/Actors/Door2" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget3" to="Node2D/Actors/Door2" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget4" to="Node2D/Actors/Door3" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget6" to="Node2D/Actors/Door5" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget7" to="Node2D/Actors/Door6" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget8" to="Node2D/Actors/Door7" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget9" to="Node2D/Actors/Door8" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget10" to="Node2D/Actors/Door9" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget11" to="Node2D/Actors/Door9" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget12" to="Node2D/Actors/Door9" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget13" to="Node2D/Actors/Door9" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget14" to="Node2D/Actors/Door13" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget15" to="Node2D/Actors/Door10" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget15" to="Node2D/Actors/Door11" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget15" to="Node2D/Actors/Door12" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget16" to="." method="_on_LaserTarget16_on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget16" to="Node2D/Actors/Door14" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget17" to="Node2D/Actors/Door6" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget17" to="Node2D/Actors/Door7" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget17" to="Node2D/Actors/Door8" method="on_toggle"]
[connection signal="on_toggle" from="Node2D/Actors/LaserTarget18" to="Node2D/Actors/Door15" method="on_toggle"]

[editable path="Node2D/Actors/RoomTransfer"]
